--- a/views/noticeboard-map.ejs
+++ b/views/noticeboard-map.ejs
@@ -118,6 +118,8 @@
     <script type="text/javascript">
         var map = L.map('map_full', { attributionControl: false }).setView([43.659752, -79.378161], 2);
 
+        var myAttrControl = L.control.attribution().addTo(map);
+        myAttrControl.setPrefix('<a href="https://leafletjs.com/">Leaflet</a>');
         // Adds the basemap tiles to your web map
         // Additional providers are available at: https://leaflet-extras.github.io/leaflet-providers/preview/
         L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
