--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,7 +33,7 @@
           </div>
           <div class="col-lg-6">
             <h4 class="display-6 fw-bold lh-1 mb-3">Open airspace connectivity</h4>
-            <p class="lead">With Flight Spotlight, you can see flights and drones in an airspace real-time and in compliance with related standards for unmanned air traffic. You can connect to a U-Space / UTM airspace for exchanging operational intents, geofences Network Remote ID information and live air-traffic. You can also integrate other data sources such as ADS-B feeds and your own mission planning software. Finally, it is compatible with different data sources to display flight information e.g. drone registration data, flight declarations and permissioning and other advanced features.</p>
+            <p class="lead">With Flight Spotlight, you can see flights and drones in an airspace real-time and in compliance with related standards for unmanned air traffic. You can connect to a U-Space / UTM airspace for exchanging operational intents, geo-fences Network Remote ID information and live air-traffic. You can also integrate other data sources such as ADS-B feeds and your own mission planning software. Finally, it is compatible with different data sources to display flight information e.g. drone registration data, flight declarations and flight permissions and other advanced features.</p>
             <br>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <a class="btn btn-primary btn-lg px-4 gap-3" href="/auth" >Log in </a>   
